# ComfyUI-WebUI-Prompt-Bridge

./: .comfyignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.local.example.json  nodes.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance.yml
.github/workflows/: quality.yml
docs/: release-notes-v0.4.18.md  release-notes-v0.4.27.md  release-notes-v0.4.28.md  release-notes-v0.4.29.md
tests/: test_prompt_library.py
tools/: verify_frontend_compat.mjs
web/: webui_prompt_bridge.js
workflows/: anima-webui-prompt-bridge.json  tutorial-minimal-anima-webui-prompt-bridge.json  tutorial-minimal-xl-webui-prompt-bridge.json  xl-img2img-webui-prompt-bridge.json
